--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,13 +8,14 @@
     <string name="botao_adiciona_remove">Add to my WatchListt!</string>
     <string name="botao_busca">Search</string>
     <string name="titulo_filme">Movie name</string>
-    <string name="remove_filme">Remove from my WatchListt</string>
-    <string name="adiciona_filme">Add to my WatchListt</string>
+    <string name="remove_movie">Remove from my WatchListt</string>
+    <string name="add_movie">Add to my WatchListt</string>
     <string name="title_activity_xxxyyy">XxxyyyActivity</string>
     <string name="title_activity_primeira">PrimeiraActivity</string>
     <string name="title_activity_first">FirstActivity</string>
     <string name="resultado_busca">Resultado da busca</string>
     <string name="sua_busca_para">Sua busca para </string>
     <string name="retornou">retornou</string>
+    <string name="resultado">resultado</string>
     <string name="resultados">resultados</string>
 </resources>
