--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="retornou">retornou</string>
     <string name="resultado">resultado</string>
     <string name="resultados">resultados</string>
+    <string name="some_error_occurred">Some error occurred. Try again in a few minutes.</string>
 </resources>
