--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_teste_aba_home">TesteAbaHomeActivity</string>
+    <string name="movie_title">Batman</string>
+    <string name="poster">poster</string>
+    <string name="ano">2016</string>
 </resources>
