--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="movie_title">Batman</string>
     <string name="poster">poster</string>
     <string name="ano">2016</string>
+    <string name="home">Home</string>
+    <string name="mylistt">MyListt</string>
 </resources>
