--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,8 @@
     <string name="resultados">resultados</string>
     <string name="some_error_occurred">Some error occurred. Try again in a few minutes.</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="there_is_no_movies">There\'s no movies in your WatchListt :(</string>
+    <string name="search_movies">Go to search a movie!</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_teste_aba_home">TesteAbaHomeActivity</string>
     <string name="movie_title">Batman</string>
