--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="baseUrlNuvem">https://wlistt.herokuapp.com</string>
     <string name="baseUrlLocalDevice">http://192.168.1.5:5000</string>
     <string name="baseUrlLocalEmulator">http://10.0.2.2:5000</string>
+    <string name="search_a_movie">Search a Movie</string>
 </resources>
