--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="poster">poster</string>
     <string name="ano">2016</string>
     <string name="home">Home</string>
-    <string name="chamada">Search a movie to add to your WatchListt</string>
+    <string name="chamada">Add a movie to your WatchListt</string>
     <string name="search_a_movie">Search a Movie</string>
 
     <string name="testarApiLocal">true</string>
