correcoes no layout main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="home">Home</string>
     <string name="chamada">Add a movie to your WatchListt</string>
     <string name="search_a_movie">Search a Movie</string>
+    <string name="exemplo_filme">Interestellar</string>
 
     <string name="testarApiLocal">true</string>
     <string name="baseUrlNuvem">https://wlistt.herokuapp.com</string>
